tests/semantic_errors/gajdosik4_3.tl
require "ifj21"
--chyba definicia main
global name : function (integer) : string, string, string
function name    (a : integer, a : integer) : string, string, string end

function main()
    local id : integer = 102
    while 1 do
        while 1 do
            while 1 do
                while 1 do
                    local num : id = 89
                end
	    id = 90
            end
        end
        num = "ERR?"
    end
end
